--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 django-heroku==0.3.1
 whitenoise==5.2.0
-django-turbo-response==0.0.33
+django-turbo-response
